# MCPGuard-Agentic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  python-agentic-worker-spec.md
python-worker/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
python-worker/app/: config.py  logging_config.py  main.py
python-worker/app/models/: schemas.py
python-worker/app/routes/: analyze.py
python-worker/app/services/: analyzer.py  callback.py  pipeline.py  storage.py
python-worker/tests/: test_analyze.py  test_analyzer.py  test_models.py
