[project]
name = "mcpguard-python-worker"
version = "1.0.0"
description = "MCPGuard Python Agentic Worker — AI-powered semantic security analysis"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
